// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionItem "open" command renders as link 1`] = `
<DocumentFragment>
  <a
    class="anchorLink btn btnLink test-action-item actionItemLink"
    href="https://example.com/bar"
    tabindex="0"
  >
     t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem "open" command renders as link that opens in a new tab, but without icon for a different origin as the alt action and a primary action defined 1`] = `
<DocumentFragment>
  <a
    class="anchorLink btn btnLink test-action-item actionItemLink"
    href="https://other.com/foo"
    rel="noopener noreferrer"
    tabindex="0"
    target="_blank"
  >
     primary 
  </a>
</DocumentFragment>
`;

exports[`ActionItem "open" command renders as link with icon and opens a new tab for a different origin 1`] = `
<DocumentFragment>
  <a
    class="anchorLink btn btnLink test-action-item actionItemLink"
    href="https://other.com/foo"
    rel="noopener noreferrer"
    tabindex="0"
    target="_blank"
  >
     t 
    <openinnewicon />
  </a>
</DocumentFragment>
`;

exports[`ActionItem actionItem variant 1`] = `
<DocumentFragment>
  <a
    aria-label="d"
    class="test-action-item"
    data-tooltip="d"
    href=""
    role="button"
    tabindex="0"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem non-actionItem variant 1`] = `
<DocumentFragment>
  <a
    aria-label="d"
    class="test-action-item"
    data-tooltip="d"
    href=""
    role="button"
    tabindex="0"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem non-pressed actionItem 1`] = `
<DocumentFragment>
  <a
    aria-pressed="false"
    class="test-action-item"
    data-action-item-pressed="false"
    href=""
    role="button"
    tabindex="0"
  >
     b 
  </a>
</DocumentFragment>
`;

exports[`ActionItem noop command 1`] = `
<DocumentFragment>
  <span
    data-tooltip="d"
  >
    <img
      alt="d"
      src="u"
    />
     g: t
  </span>
</DocumentFragment>
`;

exports[`ActionItem pressed toggle actionItem 1`] = `
<DocumentFragment>
  <a
    aria-pressed="true"
    class="test-action-item"
    data-action-item-pressed="true"
    href=""
    role="button"
    tabindex="0"
  >
     b 
  </a>
</DocumentFragment>
`;

exports[`ActionItem run command 1`] = `
<DocumentFragment>
  <a
    aria-label="d"
    class="test-action-item"
    data-tooltip="d"
    href=""
    role="button"
    tabindex="0"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem run command 2`] = `
<DocumentFragment>
  <a
    aria-label="d"
    class="test-action-item"
    data-tooltip="d"
    href=""
    role="button"
    tabindex="0"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem run command with error 1`] = `
<DocumentFragment>
  <a
    aria-label="d"
    class="test-action-item"
    data-tooltip="d"
    href=""
    role="button"
    tabindex="0"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem run command with error with showInlineError 1`] = `
<DocumentFragment>
  <a
    aria-label="Error: x"
    class="test-action-item"
    data-tooltip="Error: x"
    href=""
    role="button"
    tabindex="0"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="disabledTooltip"
      data-tooltip="d"
      tabindex="0"
    />
    <a
      aria-label="d"
      class="test-action-item actionItemLoading disabled"
      data-tooltip="d"
      disabled=""
      href=""
      role="button"
      tabindex="-1"
    >
      <img
        alt="d"
        src="u"
      />
       g: t 
      <div
        class="loader"
        data-testid="action-item-spinner"
      >
        <div
          class="loadingSpinner"
        />
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 2`] = `
<DocumentFragment>
  <a
    aria-label="d"
    class="test-action-item"
    data-tooltip="d"
    href=""
    role="button"
    tabindex="0"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </a>
</DocumentFragment>
`;

exports[`ActionItem title element 1`] = `
<DocumentFragment>
  <a
    aria-label="d"
    class="test-action-item"
    data-tooltip="d"
    href=""
    role="button"
    tabindex="0"
  >
    <span>
      t2
    </span>
     
  </a>
</DocumentFragment>
`;
